--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -219,6 +219,8 @@
 
   <footer id="footer">
 
+    <p><i class="fa-brands fa-twitter"></i> <i class="fa-brands fa-facebook-f"></i> <i class="fa-brands fa-instagram"></i> <i class="fa-solid fa-envelope"></i></p>
+    <br />
     <p>© Copyright TinDog</p>
 
   </footer>
